# kg-rag-benchmark

./: .gitignore  Docker-compose.yml  README.md  pyproject.toml  smoke_test.py
data/: company.json  plaintext.md
eval/: judge.py  metrics.py  questions.json  report.py  runner.py
experiments/: baseline.yaml
pipeline/: config.py
pipeline/generation/: generator.py
pipeline/graph/: connection.py  entity_extractor.py  entity_resolver.py  graph_store.py
pipeline/keyword/: bm25_store.py
pipeline/preprocessing/: chunker.py  loader.py  normalizer.py  pipe.py
pipeline/retrieval/: query_analyzer.py  retriever.py
pipeline/vector/: embedding.py  vector_store.py
results/: baseline_20260413_1941.json  baseline_20260413_1941_report.html  baseline_20260413_1956.json  baseline_20260413_1956_report.html  baseline_20260413_2004.json  baseline_20260413_2004_report.html  baseline_20260413_2018.json  baseline_20260413_2018_report.html
